콘텐츠 추가 및 UX 개선
- 본문 폭이 너무 좁아 글을 읽기에 불편했던 문제를 해결하였습니다.

- IE에서 접속시 그 버전과 마지막 업데이트일로부터 지난 날을 알려줍니다. (문제점 인식을 도움)

- 댓글이 로드중일때는 이를 알리는 텍스트가 표시됩니다.

--- a/css/content.css
+++ b/css/content.css
@@ -4,8 +4,12 @@
   text-align: center;
 }
 
+.hidden {
+  display: none;
+}
+
 .container {
-  max-width: 550px;
+  max-width: 650px;
   margin: auto;
   padding: .5rem;
 }
@@ -76,6 +80,12 @@ footer {
   font-weight: 800;
   font-size: 1.75em;
   text-align: center;
+}
+
+#ie-info {
+  background: #f74f36;
+  color: white;
+  border-color: black;
 }
 
 #github-icon {
