--- a/css/button.css
+++ b/css/button.css
@@ -1,8 +1,8 @@
 a.button {
   max-width: 175px;
   display: block;
-  padding: .5rem;
-  margin: .5rem auto;
+  padding: 0.5rem;
+  margin: 0.5rem auto;
   border: 2px solid #4f4f4f;
   color: black;
   background: white;
